--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "json-server": "^0.17.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.394.0",
     "moment": "^2.30.1",
     "npm": "^10.7.0",
