--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
+    "js-cookie": "^3.0.5",
     "json-server": "^0.17.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.394.0",
